deleted backend stuuf

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.cdnfonts.com/css/new-super-mario-font-u" rel="stylesheet">
                 
 
-    <title>Bowsérmon</title>
+    <title>Auth React Starter</title>
   </head>
   <body>
     <noscript>
